cleanup: avoid deprecated usage